handle case where no predicates are pushed down